# CS173P1-Finite-Automata

Project1/: README.txt
Project1/CSC173 Project 1 Code/: CMakeLists.txt  README.txt  Set.c  dfa.c  dfa.h  nfa.c  nfa.h  tester.c
Project1/CSC173 Project 1 Code/save/: project1.c
